--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div id="footer">
-            <img id="profile-img" src="/Screenshot 2023-06-03 at 22-25-39 TasosPhotography (@tasos.photography) Instagram.png" alt="profile img">
+            <img id="profile-img" src="Screenshot 2023-06-03 at 22-25-39 TasosPhotography (@tasos.photography) Instagram.png" alt="profile img">
             <p>Welcome to our tour! 
                 We’re excited to show you around and share with you all the amazing things that this city has to offer.
                 Our tour is designed to be informative, engaging, and fun. 
